Nav menu no longer covers FAQ question headers
- Top padding changes jump viewport position to top of padding while negative top margin offesets the padding
- http://nicolasgallagher.com/jump-links-and-viewport-positioning/demo/#method-C

Found a better way to keep markdown and offset nav

- Fixes Issue #492
- Headers are relatively positioned so the anchor tags offset the viewport by enough to clear the nav
- Because the name attribute is meant for form submission, it's not a common attribute for anchor tags

Removed extra anchor closing tag

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -829,6 +829,18 @@ li.L1,li.L3,li.L5,li.L7,li.L9 { }
   pre .atv, code .atv { color: #060; }
 }
 
+/* FAQ */
+
+a[name] {
+  position: absolute;
+  top: -3em;
+}
+
+@media only screen and (min-width: 60em) {
+  a[name] {
+    top: -5em;
+  }
+}
 
 /* ==========================================================================
 Helper classes
